Hide overflow on application list row to prevent scrollbar

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -239,6 +239,7 @@ and (max-width: 1000px) {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow-x: hidden;
 
   .application-handling__list-row--applicant-unknown {
     color: gray;
